# models.md

./: .env.example  .gitignore  Makefile  README.md  config.json  models.schema.yaml  pyproject.toml  pyrightconfig.json
.agents/skills/add-source-type/: SKILL.md
.github/: copilot-instructions.md
.github/skills/add-source-type/: SKILL.md
.github/skills/analyze-run/: SKILL.md
.github/skills/conventional-commit/: SKILL.md
docs/models/: models.catalog.copilot.md  models.catalog.opencode.md  models.lifecycle.md  models.md  models.views.md
src/models_pipeline/: __init__.py  __main__.py  cli.py  env.py
src/models_pipeline/config/: __init__.py  builders.py  loader.py  parsers.py  runtime_builders.py  schema.py  source_builders.py  validators.py
src/models_pipeline/crawl/: __init__.py  config_core.py  debug_dump.py  fetch_sync.py  fetch_workers.py  markdown_extract.py  tables.py
src/models_pipeline/llm/: __init__.py  backend.py  errors.py  executor.py  router.py  types.py
src/models_pipeline/output/: __init__.py  json_extract.py  json_parse.py  parser.py  (+2 more)
tests/: test_crawl.py  test_env.py  test_http.py  test_llm_adapters.py  test_llm_client.py  test_main.py  test_output.py  test_prompt.py
tests/config/: test_config_output_loading.py  test_config_runtime_loading.py  test_config_source_loading.py
tests/pipeline/: test_pipeline_config_steps.py  test_pipeline_process_steps.py  test_pipeline_read_steps.py  test_pipeline_run_session.py
tests/sources/: test_sources_debug.py  test_sources_read_all.py  test_sources_read_single.py  test_sources_registry.py
(+37 files in other folders)
